--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
@@ -31,8 +28,10 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="">
-
+      <div class="columns">
+        <div class="column is-one-quarter">9AM</div>
+        <textarea class="column is one-half"></textarea>
+        <button class="column"></button>
       </div>
     </div>
 
