defined preliminary timeblocks for 9am - 5pm

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,9 +28,57 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="columns">
-        <div class="column is-one-quarter">9AM</div>
-        <textarea class="column is one-half"></textarea>
-        <button class="column"></button>
+        <div class="column is-one-quarter hour">9AM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">10AM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">11AM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">12PM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">1PM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">2PM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">3PM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">4PM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
+      </div>
+
+      <div class="columns">
+        <div class="column is-one-quarter hour">5PM</div>
+        <textarea class="column is one-half description"></textarea>
+        <button class="column is-one-quarter"></button>
       </div>
     </div>
 
