modified css bulma import into index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -27,57 +28,57 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="columns">
+      <div class="columns row time-block">
         <div class="column is-one-quarter hour">9AM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">10AM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">11AM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">12PM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">1PM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">2PM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">3PM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">4PM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
 
       <div class="columns">
         <div class="column is-one-quarter hour">5PM</div>
-        <textarea class="column is one-half description"></textarea>
+        <textarea class="column is-one-half description"></textarea>
         <button class="column is-one-quarter"></button>
       </div>
     </div>
