finalized definition of time-block columns

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="columns row time-block">
-        <div class="column is-one-quarter hour">9AM</div>
+        <div class="column is-one-fifth hour">9AM</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
       <div class="columns">
@@ -67,7 +69,7 @@
       <div class="columns">
         <div class="column is-one-quarter hour">3PM</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class=" saveBtn column is-one-quarter"></button>
       </div>
 
       <div class="columns">
@@ -84,6 +86,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
