changed timeblock structures for the rest of the workday

--- a/index.html
+++ b/index.html
@@ -29,59 +29,75 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="columns row time-block">
-        <div class="column is-one-fifth hour">9AM</div>
+        <div class="column is-one-fifth hour">9am</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
           <span class="iconify center" data-icon="oi:circle-check"></span>
         </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">10AM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">10am</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">11AM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">11am</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">12PM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">12pm</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">1PM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">1pm</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">2PM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">2pm</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">3PM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">3pm</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class=" saveBtn column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">4PM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">4pm</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
 
-      <div class="columns">
-        <div class="column is-one-quarter hour">5PM</div>
+      <div class="columns row time-block">
+        <div class="column is-one-fifth hour">5pm</div>
         <textarea class="column is-one-half description"></textarea>
-        <button class="column is-one-quarter"></button>
+        <button class="saveBtn column is-one-fifth">
+          <span class="iconify center" data-icon="oi:circle-check"></span>
+        </button>
       </div>
     </div>
 
