--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
+    <script src="./assets/index.js"></script>
   </body>
 </html>
