created initial logic for currDate display and if statements for currBlock/currHr relationships

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
+      <h1 class="display-3">Weekly Planner</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="9">
         <div class="column is-one-fifth hour">9am</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -36,7 +36,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="10">
         <div class="column is-one-fifth hour">10am</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -44,7 +44,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="11">
         <div class="column is-one-fifth hour">11am</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -52,7 +52,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="12">
         <div class="column is-one-fifth hour">12pm</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -60,7 +60,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="1">
         <div class="column is-one-fifth hour">1pm</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -68,7 +68,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="2">
         <div class="column is-one-fifth hour">2pm</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -76,7 +76,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="3">
         <div class="column is-one-fifth hour">3pm</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -84,7 +84,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="4">
         <div class="column is-one-fifth hour">4pm</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
@@ -92,7 +92,7 @@
         </button>
       </div>
 
-      <div class="columns row time-block">
+      <div class="columns row time-block" data-id="5">
         <div class="column is-one-fifth hour">5pm</div>
         <textarea class="column is-one-half description"></textarea>
         <button class="saveBtn column is-one-fifth">
